--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -35,3 +35,21 @@ input[type="radio"].visually-hidden {
 *::after {
   box-sizing: inherit;
 }
+
+h1 {
+  font-family: "Bebas Neue", "Arial", sans-serif;
+  font-weight: bold;
+  font-size: 109px;
+  line-height: 109px;
+  letter-spacing: 0.03em;
+}
+
+h2 {
+  font-family: "Bebas Neue", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 49px;
+  line-height: 59px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
