Делает main-block desktop

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "mixins";
 @import "normalize";
 @import "fonts";
 @import "scaffolding";
+@import "blocks/main-block";
