--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -8,6 +8,7 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
+  font-family: "Roboto Condensed", "Arial", sans-serif;
 }
 
 img {
@@ -34,22 +35,4 @@ input[type="radio"].visually-hidden {
 *::before,
 *::after {
   box-sizing: inherit;
-}
-
-h1 {
-  font-family: "Bebas Neue", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 109px;
-  line-height: 109px;
-  letter-spacing: 0.03em;
-}
-
-h2 {
-  font-family: "Bebas Neue", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 49px;
-  line-height: 59px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
 }
