--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,5 @@
-$desktop-width: 1024px;
+$desktop-width2: 1366px;
+$desktop-width1: 1200px;
 $tablet-width: 768px;
 $mobile-width: 320px;
 $prefix-css-img: "../img/";
