--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -2,23 +2,31 @@
   display: flex;
   justify-content: center;
   color: #ffffff;
-  background-color: #691a4f;
 }
 
 .main-block__inner {
-  width: $desktop-width1;
-  padding: 30px 20px 51px;
+  width: $desktop-width2;
+  padding: 30px 0 51px;
+  background: url("#{$prefix-css-img}main-block-bg-desktop@1x.jpg") no-repeat center 0;
+
+  @include bg-retina("main-block-bg-desktop@1x.jpg");
+  background-size: cover;
 }
 
 .main-block__top {
   display: flex;
   justify-content: space-between;
+  width: $desktop-width1;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .main-block__bottom {
   display: flex;
   justify-content: space-between;
-  margin-top: -5px;
+  width: $desktop-width1;
+  margin: -5px auto 0;
+  padding: 0 20px;
 }
 
 .main-block__logo a {
@@ -38,6 +46,14 @@
   letter-spacing: 0.03em;
   text-decoration: none;
   color: #ffffff;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .main-block__container {
