--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -5,18 +5,18 @@
 }
 
 .main-block__inner {
-  width: $desktop-width2;
+  width: $desktop-width;
   padding: 30px 0 51px;
   background: url("#{$prefix-css-img}main-block-bg-desktop@1x.jpg") no-repeat center 0;
 
-  @include bg-retina("main-block-bg-desktop@1x.jpg");
+  @include bg-retina("main-block-bg-desktop@2x.jpg");
   background-size: cover;
 }
 
 .main-block__top {
   display: flex;
   justify-content: space-between;
-  width: $desktop-width1;
+  width: $desktop-container-width;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -24,7 +24,7 @@
 .main-block__bottom {
   display: flex;
   justify-content: space-between;
-  width: $desktop-width1;
+  width: $desktop-container-width;
   margin: -5px auto 0;
   padding: 0 20px;
 }
@@ -60,8 +60,19 @@
   width: 396px;
 }
 
+.main-block__inner p {
+  margin: 111px 0 0 0;
+  font-family: "Bebas Neue", "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 49px;
+  line-height: 59px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-align: right;
+}
+
 .main-block__inner h1 {
-  margin: 71px 0 0 0;
+  margin: 9px 0 0 0;
   font-family: "Bebas Neue", "Arial", sans-serif;
   font-weight: bold;
   font-size: 109px;
@@ -71,12 +82,12 @@
   text-align: right;
 }
 
-.main-block__inner h1 span {
-  font-weight: normal;
-  font-size: 49px;
-  line-height: 59px;
-  letter-spacing: 0.03em;
-}
+//.main-block__inner h1 span {
+//  font-weight: normal;
+//  font-size: 49px;
+//  line-height: 59px;
+//  letter-spacing: 0.03em;
+//}
 
 .main-block__promo {
   list-style: none;
@@ -159,9 +170,78 @@
   }
 }
 
-@media (max-width: $desktop-width1 - 1) {
+@media (max-width: $desktop-container-width - 1) {
   .main-block__inner {
-    //width: $desktop-width1;
-    padding: 30px 15px 51px;
+    width: $tablet-width;
+    padding: 39px 0 82px;
+    background: url("#{$prefix-css-img}main-block-bg-tablet@1x.jpg") no-repeat center 0;
+
+    @include bg-retina("main-block-bg-tablet@2x.jpg");
+  }
+
+  .main-block__top {
+    width: $tablet-container-width;
+    margin: 0 auto 19px;
+    padding: 0;
+  }
+
+  .main-block__bottom {
+    width: $tablet-container-width;
+    margin: 0 auto 0;
+    padding: 0;
+  }
+
+  .main-block__logo a {
+    font-size: 24px;
+    line-height: 24px;
+  }
+
+  .main-block__phone a {
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+  }
+
+  .main-block__container {
+    width: 325px;
+  }
+
+  .main-block__inner p {
+    margin: 51px 0 0 0;
+    font-size: 34px;
+    line-height: 41px;
+  }
+
+  .main-block__inner h1 {
+    margin: 2px 0 0 0;
+    font-size: 86px;
+    line-height: 86px;
+  }
+
+  .main-block__promo {
+    width: 114px;
+    margin: -80px 0 0;
+  }
+
+  .main-block__button {
+    margin: 57px -1px 0 0;
+  }
+
+  .main-block__button a {
+    width: 187px;
+  }
+
+  .main-block__photo {
+    width: 324px;
+    height: 390px;
+    margin: 0;
+    background: url("#{$prefix-css-img}superman-tablet@1x.jpg") no-repeat 0 0;
+
+    @include bg-retina("superman-tablet@2x.jpg");
+    background-size: 324px 390px;
+  }
+
+  .main-block__social {
+    display: none;
   }
 }
