--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,7 @@
-$desktop-width2: 1366px;
-$desktop-width1: 1200px;
+$desktop-width: 1366px;
+$desktop-container-width: 1200px;
 $tablet-width: 768px;
+$tablet-container-width: 678px;
 $mobile-width: 320px;
 $prefix-css-img: "../img/";
 $retina-dpi: 144dpi;
