--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $desktop-container-width: 1200px;
 $tablet-width: 768px;
 $tablet-container-width: 678px;
 $mobile-width: 320px;
+$mobile-container-width: 294px;
 $prefix-css-img: "../img/";
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
