--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,3 +7,4 @@ $mobile-container-width: 294px;
 $prefix-css-img: "../img/";
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
+$color-dark-text: #102654;
