--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -58,18 +58,48 @@
 }
 
 .gym__video {
-  position: absolute;
+  position: absolute; // дублирование для наглядности
   left: -63px;
   bottom: -115px;
 }
 
 @media (max-width: $desktop-container-width - 1) {
-  .gym {
-    background-color: rgba(0, 100, 0, 0.69); // для теста
+  .gym__inner {
+    display: block;
+    width: $tablet-container-width;
+    padding: 53px 0 0;
   }
 
-  .gym__inner {
-    width: $tablet-container-width;
-    padding: 120px 0 0;
+  .gym__text {
+    margin: 0 auto 43px;
+    width: 515px;
+    text-align: center;
+  }
+
+  .gym__text h2 {
+    font-size: 42px;
+    line-height: 42px;
+  }
+
+  .gym__subtitle {
+    margin: 0 0 34px;
+  }
+
+  .gym__paragraph--desktop {
+    display: none;
+  }
+
+  .gym__image {
+    width: 678px;
+    height: 345px;
+    background: url("#{$prefix-css-img}gym-tablet@1x.jpg") no-repeat 0 0;
+
+    @include bg-retina("gym-tablet@2x.jpg");
+    background-size: 678px 345px;
+  }
+
+  .gym__video {
+    left: 206px;
+    bottom: -83px;
   }
 }
