--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -103,3 +103,45 @@
     bottom: -83px;
   }
 }
+
+@media (max-width: $tablet-width - 1) {
+  .gym__inner {
+    width: $mobile-width;
+    padding: 18px 0 66px;
+  }
+
+  .gym__text {
+    margin: 0 auto 33px;
+    width: 289px;
+    text-align: left;
+  }
+
+  .gym__text h2 {
+    margin: 0 0 6px;
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .gym__subtitle {
+    margin: 0 0 24px;
+  }
+
+  .gym__paragraph {
+    width: 260px;
+  }
+
+  .gym__image {
+    width: 320px;
+    height: 313px;
+    margin: 0 0 210px;
+    background: url("#{$prefix-css-img}gym-mobile@1x.jpg") no-repeat 0 0;
+
+    @include bg-retina("gym-mobile@2x.jpg");
+    background-size: 320px 313px;
+  }
+
+  .gym__video {
+    left: 0;
+    bottom: -207px;
+  }
+}
