--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   width: $desktop-container-width - 40px;
   margin: 0 auto;
-  padding: 120px 0 0 60px;
+  padding: 120px 0 235px 60px;
 }
 
 .gym__text {
