--- a/source/sass/blocks/season-tickets.scss
+++ b/source/sass/blocks/season-tickets.scss
@@ -49,9 +49,13 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 150%;
-  color: $color-dark-text;
+  color: rgba(16, 38, 84, 0.5);
   background-color: transparent;
   border: none;
+}
+
+.season-tickets__tabs-item--active button {
+  color: $color-dark-text;
 }
 
 .season-tickets__tabs-item--active button::before {
