--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -3,8 +3,6 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   min-width: 320px;
   margin: 0;
   padding: 0;
@@ -35,4 +33,8 @@ input[type="radio"].visually-hidden {
 *::before,
 *::after {
   box-sizing: inherit;
+}
+
+.page-main {
+  overflow: hidden;
 }
