--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -85,7 +85,8 @@
   color: $color-dark-text;
   box-shadow: inset 0 0 0 2px $color-dark-text;
 
-  &:hover {
+  &:hover,
+  &:focus {
     color: #ffffff;
     box-shadow: none;
     background: url("#{$prefix-css-img}btn-bg.svg") no-repeat 0 0;
