Делает season-tickets tablet

--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -67,7 +67,7 @@
   .gym__inner {
     display: block;
     width: $tablet-container-width;
-    padding: 53px 0 0;
+    padding: 53px 0 183px;
   }
 
   .gym__text {
