Делает trainers desktop резину с вспомогательным js

--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: $desktop-container-width - 40px;
   margin: 0 auto;
-  padding: 120px 0 0;
+  padding: 120px 0 60px;
 }
 
 .promo__text {
