--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,6 @@
 @import "blocks/season-tickets";
 @import "blocks/offer";
 @import "blocks/promo";
+@import "blocks/trainers";
+@import "blocks/slider";
+@import "blocks/trainer-card";
