--- a/source/sass/blocks/trainer-card.scss
+++ b/source/sass/blocks/trainer-card.scss
@@ -1,7 +1,7 @@
 .trainer-card {
   position: relative;
-  width: 260px;
-  height: 294px;
+  width: $trainer-card-width;
+  height: $trainer-card-height;
   margin: 0 auto;
   padding: 249px 20px 0;
   color: #ffffff;
@@ -10,28 +10,28 @@
     background: #263b64 url("#{$prefix-css-img}trainer1-desktop@1x.jpg") no-repeat 0 0;
 
     @include bg-retina("trainer1-desktop@2x.jpg");
-    background-size: 260px 294px;
+    background-size: $trainer-card-width $trainer-card-height;
   }
 
   &--2 {
     background: #263b64 url("#{$prefix-css-img}trainer2-desktop@1x.jpg") no-repeat 0 0;
 
     @include bg-retina("trainer2-desktop@2x.jpg");
-    background-size: 260px 294px;
+    background-size: $trainer-card-width $trainer-card-height;
   }
 
   &--3 {
     background: #263b64 url("#{$prefix-css-img}trainer3-desktop@1x.jpg") no-repeat 0 0;
 
     @include bg-retina("trainer3-desktop@2x.jpg");
-    background-size: 260px 294px;
+    background-size: $trainer-card-width $trainer-card-height;
   }
 
   &--4 {
     background: #263b64 url("#{$prefix-css-img}trainer4-desktop@1x.jpg") no-repeat 0 0;
 
     @include bg-retina("trainer4-desktop@2x.jpg");
-    background-size: 260px 294px;
+    background-size: $trainer-card-width $trainer-card-height;
   }
 
 
@@ -111,4 +111,40 @@
   height: 6px;
   background-color: #ffffff;
   border-radius: 50%;
+}
+
+@media (max-width: $desktop-container-width - 1) {
+  $trainer-card-width: 268px;
+
+  .trainer-card {
+    width: $trainer-card-width;
+
+    &--1 {
+      background: #263b64 url("#{$prefix-css-img}trainer1-tablet@1x.jpg") no-repeat 0 0;
+
+      @include bg-retina("trainer1-tablet@2x.jpg");
+      background-size: $trainer-card-width $trainer-card-height;
+    }
+
+    &--2 {
+      background: #263b64 url("#{$prefix-css-img}trainer2-tablet@1x.jpg") no-repeat 0 0;
+
+      @include bg-retina("trainer2-tablet@2x.jpg");
+      background-size: $trainer-card-width $trainer-card-height;
+    }
+
+    &--3 {
+      background: #263b64 url("#{$prefix-css-img}trainer3-tablet@1x.jpg") no-repeat 0 0;
+
+      @include bg-retina("trainer3-tablet@2x.jpg");
+      background-size: $trainer-card-width $trainer-card-height;
+    }
+
+    &--4 {
+      background: #263b64 url("#{$prefix-css-img}trainer4-tablet@1x.jpg") no-repeat 0 0;
+
+      @include bg-retina("trainer4-tablet@2x.jpg");
+      background-size: $trainer-card-width $trainer-card-height;
+    }
+  }
 }
