--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $color-dark-text: #102654;
 // trainer-card
 $trainer-card-width: 260px;
 $trainer-card-height: 294px;
+$trainer-card-mobile-height: 274px;
 $trainer-card-between: 40px;
 // trainers
 $trainers_indent_for_scroll: 40px;
