--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -3,7 +3,6 @@
     position: relative;
     width: $trainers-slider-width;
     margin: 0 auto;
-    //background-color: hsla(200, 100%, 50%, 0.1);
   }
 
   .slider__btn {
@@ -17,12 +16,12 @@
 
     &--left {
       left: 3px;
-      background: url("#{$prefix-css-img}btn-left.svg") no-repeat 0 0;
+      background: url("#{$prefix-css-img}btn-left-desktop.svg") no-repeat 0 0;
     }
 
     &--right {
       right: 3px;
-      background: url("#{$prefix-css-img}btn-right.svg") no-repeat 0 0;
+      background: url("#{$prefix-css-img}btn-right-desktop.svg") no-repeat 0 0;
     }
   }
 
@@ -30,10 +29,9 @@
     position: relative;
     display: flex;
     width: $trainers-slider-carousel-width;
-    height: 294px;
+    height: $trainer-card-height;
     margin: 0 auto;
     overflow: hidden;
-    //background-color: hsla(280, 100%, 50%, 0.1);
   }
 
   .slider__list {
@@ -48,8 +46,7 @@
 
   .slider__item {
     width: $trainers-slider-item-width;
-    height: 294px;
-    //background-color: hsla(150, 100%, 50%, 0.1);
+    height: $trainer-card-height;
   }
 
   @media (max-width: $trainers-slider-width - 1 + $trainers_indent_for_scroll) {
@@ -72,20 +69,37 @@
     }
   }
 
-  @media (max-width: $desktop-container-width - 1) {
-    $carousel_lrm: 45px;
-    $slider_width: "(#{$tablet-container-width} + 8px)";
-    $set_count: 2;
+  @media (max-width: $tablet-width - 1) {
+    $carousel_lrm: 30px;
+    $slider_width: "(#{$mobile-container-width} + 0px)";
+    $set_count: 1;
     $carousel_width: "(#{$slider_width} - 2 * #{$carousel_lrm})";
     $item_width: #{$carousel_width} / #{$set_count};
-    $translate_x: "(#{$carousel_width} * -1)";
+    $translate_x: "(#{$carousel_width} * -2)";
 
     .slider {
       width: calc(#{$slider_width});
     }
 
+    .slider__btn {
+      top: 127px;
+      width: 12px;
+      height: 21px;
+
+      &--left {
+        left: 1px;
+        background: url("#{$prefix-css-img}btn-left-mobile.svg") no-repeat 0 0;
+      }
+
+      &--right {
+        right: 1px;
+        background: url("#{$prefix-css-img}btn-right-mobile.svg") no-repeat 0 0;
+      }
+    }
+
     .slider__carousel {
       width: calc(#{$carousel_width});
+      height: $trainer-card-mobile-height;
     }
 
     .slider__list {
@@ -94,6 +108,7 @@
 
     .slider__item {
       width: calc(#{$item_width});
+      height: $trainer-card-mobile-height;
     }
   }
 }
