--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -2,7 +2,6 @@
   width: $trainers-slider-width;
   margin: 0 auto;
   padding: 59px 0 250px;
-  //background-color: hsla(100, 100%, 50%, 0.1);
 }
 
 .trainers__inner h2 {
@@ -51,5 +50,20 @@
     font-size: 42px;
     line-height: 42px;
     text-align: center;
+  }
+}
+
+@media (max-width: $tablet-width - 1) {
+  $slider_width: "(#{$mobile-container-width} - 0px)";
+
+  .trainers__inner {
+    width: calc(#{$slider_width});
+    padding: 70px 0;
+  }
+
+  .trainers__inner h2 {
+    margin: 0 0 42px;
+    font-size: 32px;
+    line-height: 32px;
   }
 }
