Прижимает в main-block ie social к низу

--- a/source/sass/blocks/main-block.scss
+++ b/source/sass/blocks/main-block.scss
@@ -136,7 +136,8 @@
 
 .main-block__social {
   list-style: none;
-  margin: auto 0 41px;
+  align-self: flex-end;
+  margin: 0 0 41px;
   padding: 0;
   text-align: right;
 }
