Делает reviews desktop, рефакторит для переиспользования slider.js

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,5 @@
 @import "blocks/slider";
 @import "blocks/trainer-card";
 @import "blocks/action";
+@import "blocks/reviews";
+@import "blocks/review-card";
