--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -5,6 +5,10 @@
     margin: 0 auto;
   }
 
+  .slider--review {
+    width: $reviews-slider-width;
+  }
+
   .slider__btn {
     position: absolute;
     top: 130px;
@@ -34,6 +38,10 @@
     }
   }
 
+  .slider--review .slider__btn {
+    top: 104px;
+  }
+
   .slider__carousel {
     position: relative;
     display: flex;
@@ -41,6 +49,11 @@
     height: $trainer-card-height;
     margin: 0 auto;
     overflow: hidden;
+  }
+
+  .slider--review .slider__carousel {
+    width: $reviews-slider-carousel-width;
+    height: $review-card-height;
   }
 
   .slider__list {
@@ -58,6 +71,11 @@
     flex-shrink: 0;
     width: $trainers-slider-item-width;
     height: $trainer-card-height;
+  }
+
+  .slider--review .slider__item {
+    width: $reviews-slider-item-width;
+    height: $review-card-height;
   }
 
   @media (max-width: $trainers-slider-width - 1 + $trainers_indent_for_scroll) {
