--- a/source/sass/blocks/review-card.scss
+++ b/source/sass/blocks/review-card.scss
@@ -37,3 +37,14 @@
   font-size: 16px;
   line-height: 140%;
 }
+
+@media (max-width: $desktop-container-width - 1) {
+  .review-card {
+    width: $review_card_tablet_width;
+    padding: 54px 61px 0 174px;
+  }
+
+  .review-card__image {
+    left: 65px;
+  }
+}
