--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -15,3 +15,18 @@
   text-align: center;
   color: #102654;
 }
+
+@media (max-width: $desktop-container-width - 1) {
+  $r_slider_width: "(#{$review_card_tablet_width} + #{$review_card_between} + 2 * #{$reviews_slider_carousel_left_right_margin})";
+
+  .reviews__inner {
+    width: calc(#{$r_slider_width});
+    padding: 39px 0 250px;
+  }
+
+  .reviews__inner h2 {
+    margin: 0 auto 1px;
+    font-size: 42px;
+    line-height: 42px;
+  }
+}
