--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -23,15 +23,15 @@ $trainers-slider-item-width: $trainers-slider-carousel-width / $trainers-slider-
 // review-card
 $review-card-width: 560px;
 $review-card-height: 242px;
-$review-card-tablet-width: 566px;
+$review_card_tablet_width: 566px;
 $review-card-mobile-width: 226px;
 $review-card-mobile-height: 335px;
-$review-card-between: 80px;
+$review_card_between: 80px;
 $review-card-top-bottom-margin: 40px;
 // reviews
 $reviews_indent_for_scroll: 40px;
-$reviews-slider-carousel-left-right-margin: 20px;
+$reviews_slider_carousel_left_right_margin: 20px;
 $reviews-slider-set-count: 1;
-$reviews-slider-width: $review-card-width + $review-card-between + 2 * $reviews-slider-carousel-left-right-margin;
-$reviews-slider-carousel-width: $reviews-slider-width - 2 * $reviews-slider-carousel-left-right-margin;
+$reviews-slider-width: $review-card-width + $review_card_between + 2 * $reviews_slider_carousel_left_right_margin;
+$reviews-slider-carousel-width: $reviews-slider-width - 2 * $reviews_slider_carousel_left_right_margin;
 $reviews-slider-item-width: $reviews-slider-carousel-width / $reviews-slider-set-count;
