--- a/source/sass/blocks/review-card.scss
+++ b/source/sass/blocks/review-card.scss
@@ -48,3 +48,33 @@
     left: 65px;
   }
 }
+
+@media (max-width: $tablet-width - 1) {
+  .review-card {
+    width: $review_card_mobile_width;
+    height: $review-card-mobile-height;
+    padding: 48px 14px 0;
+  }
+
+  .review-card__image {
+    left: 41px;
+    top: 40px;
+    width: 68px;
+    height: 68px;
+    background: #263b64 url("#{$prefix-css-img}reviewer-mobile@1x.png") no-repeat 0 0;
+
+    @include bg-retina("reviewer-mobile@2x.png");
+    background-size: 68px 68px;
+  }
+
+  .review-card__name {
+    margin: 0 0 23px 110px;
+    line-height: 130%;
+  }
+
+  .review-card__text {
+    width: 183px;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
