Делает advantages desktop, поправляет соседние секции по отступам

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,9 @@
 @import "blocks/trainers";
 @import "blocks/slider";
 @import "blocks/trainer-card";
+@import "blocks/advantages";
+@import "blocks/advantage";
+@import "blocks/advantage-top";
 @import "blocks/action";
 @import "blocks/reviews";
 @import "blocks/review-card";
